# kzg-halo2

./: Cargo.toml  README.md
benches/: commitment.rs  commitment_bench.rs  kzg.rs  kzg_bench.rs  kzg_vector_bench.rs
src/: kzg.rs  lib.rs  poly.rs  srs.rs
src/kzg/: kzg.rs  mod.rs  vector.rs
